kustomize-rollout/base/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-tomcat-preview
  labels:
    app: sample-tomcat
spec:
  selector:
    app: sample-tomcat
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
