kustomize-rollout/base/route-preview.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sample-tomcat-preview
  labels:
    app: sample-tomcat
spec:
  path: /
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: sample-tomcat-preview
    weight: 100
  port:
    targetPort: http
